clusters/dextek/apps/default/atlantis/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.plexuz.xyz/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atlantis
spec:
  hostnames:
    - atlantis.plexuz.xyz
  parentRefs:
    - name: gateway-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: atlantis
          port: 80
